--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,6 +9,6 @@ version: 2
 sphinx:
   configuration: docs/conf.py
   
-#python:
-#  install:
-#    - requirements: docs/requirements.txt
+python:
+  install:
+    - requirements: docs/requirements.txt
