--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,7 +10,8 @@ sphinx:
   configuration: docs/source/conf.py
   
 python:
-  install:
-    - requirements: docs/requirements.txt
-    - method: pip
-      path: .
+   version: 3.7
+   install:
+      - method: pip
+        path: .
+      - requirements: docs/requirements.txt
